Closed
Bug 508847
Opened 16 years ago
Closed 16 years ago
Mops test generates datatype misalignment exceptions on winmo
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: tierney, Assigned: tierney)
References
Details
Attachments
(1 file)
|
4.03 KB,
patch
|
stejohns
:
review+
|
Details | Diff | Splinter Review |
The mops test (/test/acceptance/mops/mops.abc_) generates datatype misalignment exception on winmo. Test should run, and pass.
The mops tests currently aren't run on WinMo, which is why we haven't noticed this before now.
Updated•16 years ago
|
Flags: in-testsuite?
Flags: flashplayer-qrb?
| Assignee | ||
Comment 1•16 years ago
|
||
Attachment #394090 -
Flags: review?(edwsmith)
Updated•16 years ago
|
Attachment #394090 -
Flags: review?(edwsmith) → review?(stejohns)
Comment 2•16 years ago
|
||
Comment on attachment 394090 [details] [diff] [review]
Fix unaligned data access in some of the mops methods.
Patch looks OK, but let's confirm with Scott Petersen that the MOPS opcodes are intended to allow unaligned access. (Unfortunate if so, would have been useful to require alignment, but if not, oh well...)
Attachment #394090 -
Flags: review?(stejohns) → review+
Comment 3•16 years ago
|
||
Scott Petersen confirms the current opcodes are intended to allow unaligned access, so let's land this. (This will have unfortunate implications for the JIT implementation of these on ARM, but oh well...)
| Assignee | ||
Comment 4•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 5•16 years ago
|
||
Needed for Arm/Linux too. Fixes SIGILL crash in MethodEnv::lf32() with non-aligned addresses.
Comment 6•16 years ago
|
||
Resolved fixed engineering / work item that has been pushed. Setting status to verified.
Status: RESOLVED → VERIFIED
Comment 7•16 years ago
|
||
QE: In order for this bug to be properly tested on windows mobile in the autobuild this bug# 522476 needs to be fixed.
removing QRB request, bug resolved/verified
Depends on: 522476
Flags: flashplayer-qrb?
Comment 8•16 years ago
|
||
removing in-testsuite?, using bug# 549296 to track adding mops test to ARM runs to ensure data alignment issue is regressed on all runs
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•