Fix misaligned data access exceptions in the mops test - bug 508847 (r=stejohns)